--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A polyfill for the proposed blocking elments stack API",
   "main": "blocking-elements.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "easy-sauce"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,28 @@
   },
   "homepage": "https://github.com/PolymerLabs/blockingElements#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
+    "easy-sauce": "^0.3.5",
     "inert": "git+https://github.com/WICG/inert.git#master",
+    "mocha": "^3.0.0",
     "webcomponents.js": "git+https://github.com/webcomponents/webcomponentsjs.git#v1-polymer-edits"
+  },
+  "easySauce": {
+    "username": "valdrin@google.com",
+    "key": "c0e0306e-4470-4a8b-9cde-93aca8db4c13",
+    "tests": "/test/",
+    "port": "8080",
+    "platforms": [
+      [
+        "Windows 10",
+        "chrome",
+        "latest"
+      ],
+      [
+        "Linux",
+        "firefox",
+        "latest"
+      ]
+    ]
   }
 }
