--- a/bower.json
+++ b/bower.json
@@ -17,8 +17,8 @@
   "private": true,
   "devDependencies": {
     "inert": "WICG/inert#^1",
-    "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.6",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.4"
+    "web-component-tester": "Polymer/web-component-tester#^6",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1"
   },
   "ignore": []
 }
