--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,5 @@
 {
-  "name": "blockingElements",
-  "version": "0.0.1",
+  "name": "blocking-elements",
   "description": "A polyfill for the proposed blocking elments stack API",
   "main": "blocking-elements.html",
   "authors": [
