--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-env": "^1.6.1",
     "eslint": "^4.0.0",
     "eslint-config-google": "^0.9.1",
     "rollem": "^1.11.0",
