s/wigc/wicg, udpate readme with example, use npm packages.

--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
     "build": "rollem",
     "dev": "rollem --watch"
   },
-  "peerDependencies": {
-    "wigc-inert": "^1.1.6"
-  },
   "devDependencies": {
+    "@webcomponents/webcomponentsjs": "^1.1.0",
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-polyfill": "^6.13.0",
@@ -39,6 +37,7 @@
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup-plugin-uglify": "^2.0.1",
+    "wicg-inert": "^1.1.6"
   }
 }
