--- a/package.json
+++ b/package.json
@@ -20,25 +20,59 @@
   "homepage": "https://github.com/PolymerLabs/blockingElements#readme",
   "scripts": {
     "lint": "eslint blocking-elements.js",
-    "test": "npm run lint && npm run build && bower install && polymer test",
-    "build": "rollem",
-    "dev": "rollem --watch"
-  },
-  "peerDependencies": {
-    "wigc-inert": "^1.1.6"
+    "test": "npm run lint && npm run build && easy-sauce",
+    "build": "rollem"
   },
   "devDependencies": {
+    "@webcomponents/webcomponentsjs": "^1.1.0",
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-polyfill": "^6.13.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "chai": "^4.0.2",
+    "easy-sauce": "^0.4.1",
     "eslint": "^4.0.0",
     "eslint-config-google": "^0.9.1",
+    "mocha": "^4.0.1",
     "rollem": "^1.11.0",
     "rollup": "^0.53.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup-plugin-uglify": "^2.0.1",
+    "wicg-inert": "^1.1.6"
+  },
+  "easySauce": {
+    "testPath": "/test/",
+    "port": "8080",
+    "service": "sauce-connect",
+    "max-duration": 120,
+    "platforms": [
+      [
+        "Windows 10",
+        "chrome",
+        "latest"
+      ],
+      [
+        "Linux",
+        "firefox",
+        "latest"
+      ],
+      [
+        "Windows 10",
+        "microsoftedge",
+        "14"
+      ],
+      [
+        "OS X 10.11",
+        "safari",
+        "9"
+      ],
+      [
+        "OS X 10.12",
+        "safari",
+        "10"
+      ]
+    ]
   }
 }
