--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1",
+    "typescript": "^3.5.3",
     "wicg-inert": "^1.1.6"
   },
   "easySauce": {
