--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/PolymerLabs/blocking-elements#readme",
   "scripts": {
-    "lint": "eslint blocking-elements.js",
+    "lint": "tslint --project ./",
     "test": "npm run lint && npm run build && easy-sauce",
     "format": "clang-format --style=file -i *.ts",
     "prepack": "npm run build",
@@ -34,8 +34,6 @@
     "chai": "^4.0.2",
     "clang-format": "^1.2.4",
     "easy-sauce": "^0.4.1",
-    "eslint": "^4.0.0",
-    "eslint-config-google": "^0.9.1",
     "mocha": "^4.0.1",
     "rollem": "^1.11.0",
     "rollup": "^0.53.0",
@@ -43,6 +41,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1",
+    "tslint": "^5.18.0",
     "typescript": "^3.5.3",
     "wicg-inert": "^1.1.6"
   },
