Upgrade to latest rollup and babel

--- a/package.json
+++ b/package.json
@@ -23,24 +23,22 @@
     "test": "npm run lint && npm run build && easy-sauce",
     "format": "clang-format --style=file -i *.ts",
     "prepack": "npm run build",
-    "build": "rm -rf dist/ && tsc && rollem"
+    "build": "rm -rf dist/ && tsc && rollup -c"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@webcomponents/webcomponentsjs": "^1.1.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-external-helpers": "^6.22.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
     "chai": "^4.0.2",
     "clang-format": "^1.2.4",
     "easy-sauce": "^0.4.1",
     "mocha": "^4.0.1",
-    "rollem": "^1.11.0",
-    "rollup": "^0.53.0",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1",
+    "rollup": "^1.17.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-uglify": "^6.0.2",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3",
     "wicg-inert": "^1.1.6"
