--- a/package.json
+++ b/package.json
@@ -62,17 +62,7 @@
       [
         "Windows 10",
         "microsoftedge",
-        "14"
-      ],
-      [
-        "OS X 10.11",
-        "safari",
-        "9"
-      ],
-      [
-        "OS X 10.12",
-        "safari",
-        "10"
+        "latest"
       ]
     ]
   }
