--- a/package.json
+++ b/package.json
@@ -63,6 +63,11 @@
         "Windows 10",
         "microsoftedge",
         "latest"
+      ],
+      [	
+        "OS X 10.14",	
+        "safari",	
+        "12"	
       ]
     ]
   }
