--- a/package.json
+++ b/package.json
@@ -68,6 +68,11 @@
         "OS X 10.14",	
         "safari",	
         "12"	
+      ],
+      [	
+        "OS X 10.13",	
+        "safari",	
+        "11"	
       ]
     ]
   }
