--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blocking-elements",
-  "version": "0.0.2",
-  "description": "A polyfill for the proposed blocking elments stack API",
+  "version": "0.1.0",
+  "description": "A polyfill for the proposed blocking elements stack API",
   "main": "dist/blocking-elements.js",
   "author": "Valdrin Koshi <valdrin@google.com>",
   "license": "Apache-2.0",
